--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,9 @@
 Submit link
 </button>
 </form>
+<div class="ui grid posts">
+  <app-article
+  *ngFor="let article of sortedArticles()" 
+  [article]="article">
+</app-article>
+</div>
